--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "hbs": "^4.2.0",
     "mongodb": "^6.10.0",
     "mongoose": "^8.9.2",
+    "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.16",
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
