Feature: Update poster movie

--- a/.env
+++ b/.env
@@ -1,5 +1,7 @@
 MONGO_URI_USERDB=mongodb+srv://ipm184184:phatphat321@cluster0.cf7b2.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 MONGO_URI_MOVIEDB=mongodb+srv://quockhanh41:9hNKsR08vJlurpnO@cluster0.qrnq7.mongodb.net/MovieDB?retryWrites=true&w=majority&appName=Cluster0
+CLOUDINARY_API_KEY="524542637587694"
+CLOUDINARY_API_SECRET="9H6QO_3kgTkJV8TdXQj3fQ946Rc"
 SESSION_SECRET=verysecretkey
 EMAIL_SERVICE=gmail
 EMAIL_USERNAME=cineseats@gmail.com
